tests/mm0_mmu/fail/bad-sort431.mmu
-- bad modifier order
(sort s431 free provable pure)